fixed cut off laptop svg

--- a/style/main.css
+++ b/style/main.css
@@ -43,6 +43,7 @@ h1 {
 }
 
 .header {
+    margin-top: 75px;
 	  display: flex;
 	  height: 100vh;
 }
@@ -525,11 +526,11 @@ footer > div {
 }
 
 footer .container {
-	background: #fff;
+	background: #2b2b2a;
     font-size: 16px;
     line-height: 50px;
     width: auto;
-    max-width: 87%;
+    max-width: 100%;
     padding: 0 15px;
     margin: 0 auto;
 		text-align: center;
@@ -548,7 +549,7 @@ footer .container {
 }
 
 footer .bottom {
-	background: #f3f3f3;
+	background: #2b2b2a;
   font-size: 12px;
 }
 
